# billy-voice

./: README.md
.github/workflows/: docker.yml
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  audio.c  audio.h  billy.h  config.h  display.c  display.h  http_voice.c  http_voice.h  main.c  wake_word.c  wake_word.h
k8s/: configmap.yaml  deployment.yaml  kokoro.yaml  pvc.yaml  secret.yaml  service.yaml
server/: Dockerfile  main.py  requirements.txt
